[package]
name = "grammer"
version = "0.0.1"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
edition = "2018"
repository = "https://github.com/lykenware/grammer"
license = "MIT/Apache-2.0"
keywords = ["grammar"]
readme = "README.md"
description = "Grammar framework."

[dependencies]
ordermap = "0.3.0"
