[package]
name = "grammer"
version = "0.0.1"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
edition = "2018"
repository = "https://github.com/LykenSol/grammer"
license = "MIT/Apache-2.0"
keywords = ["grammar"]
readme = "README.md"
description = "Grammar framework."

[dependencies]
indexmap = "1"
indexing = "0.3.2"
proc-macro2 = "0.4.30"
elsa = "1.3.2"

[lib]
doctest = false
test = false
