[package]
name = "grammer"
version = "0.0.1"
authors = [
    "Ana-Maria <mihalacheana.maria@yahoo.com>",
    "Eduard-Mihai Burtescu <edy.burt@gmail.com>"
]
edition = "2018"
repository = "https://github.com/LykenSol/grammer"
license = "MIT/Apache-2.0"
keywords = ["grammar"]
readme = "README.md"
description = "Grammar framework."

[dependencies]
indexmap = "1"
proc-macro2 = "1.0.6"
elsa = "1.3.2"
flat-token = "0.0.1"

[lib]
doctest = false
test = false
